@@ -66,7 +66,9 @@ monster_max_aspd: 199
 // 0x200: When set, a mob's skill re-use delay will be applied to all entries of
 //        the same skill, instead of only that particular entry (eg: Mob has heal
 //        on six lines for different conditions, when set, whenever one of the six 
-//        trigger, all of them will share the delay)
+//        trigger, all of them will share the delay
+// 0x400: By default mobs have a range of 9 for all skills. Set this to enforce
+//        the normal skill range rules on them.
 // Example: 0x140 -> Chase players through warps + use skills in random order.
 monster_ai: 0
 
